@@ -184,6 +184,10 @@ New Features
 30. SOLR-226: Added support for dynamic field as the destination of a 
     copyField using glob (*) replacement. (ryan)
     
+31. SOLR-224: Adding a PhoneticFilterFactory that uses apache commons codec
+    language encoders to build phonetically similar tokens.  This currently
+    supports: DoubleMetaphone, Metaphone, Soundex, and RefinedSoundex (ryan)
+    
 Changes in runtime behavior
  1. Highlighting using DisMax will only pick up terms from the main 
     user query, not boost or filter queries (klaas).
